# 8_out_of_10

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __main__.py
src/core/: app.py  bot.py  create_app.py  settings.py  vk_parser.py
