[tool.poetry]
name = "core"
version = "0.0.5"
description = "Cron scan 8/10 to telegram"
authors = ["Kirill Zapyantsev <kirzap123@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.5.3"
pydantic = { extras = ["dotenv"], version = "^1.8.2" }
aiogram = "^2.19"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
bumpversion = "^0.5.3"
black = "^21.9b0"
mypy = "^0.910"
rope = "^0.21.0"
isort = "^5.9.3"
flake8-eradicate = "^1.2.0"
flake8-print = "^4.0.0"
flake8-use-fstring = "^1.3"
ipython = "^7.29.0"
bandit = "^1.6.2"

[tool.flake8]
ignore = ["D203","W605","W503","E203"]
exclude = [".git","__pycache__","README.md","chart",".env"]
max-complexity = 12
max-line-length = 89

[tool.pylint]
extension-pkg-whitelist = ["orjson"]

[tool.pylint.messages_control]
disable = [
  "relative-beyond-top-level",
  "format",                     # handled by black
  "invalid-name",
  "missing-function-docstring",
  "missing-module-docstring",
]

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.vscode
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
